--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -106,7 +106,7 @@
 
       <div class="d-flex justify-content-between">
         <%= link_to projects_path, class: "btn btn-secondary" do %>
-          <i class="fas fa-arrow-left me-1"></i>Torna ai Progetti
+          <i class="fas fa-arrow-left me-1"></i>Torna ai Fondi
         <% end %>
         
         <div>
