--- a/app/views/reimboursement_mailer/admin_note_notification.text.erb
+++ b/app/views/reimboursement_mailer/admin_note_notification.text.erb
@@ -15,7 +15,7 @@ NOTA AGGIUNTA:
 Data: <%= @note.created_at.strftime("%d/%m/%Y alle %H:%M") %>
 
 Contenuto:
-<%= @note.content %>
+<%= @note.text %>
 
 DETTAGLI RIMBORSO:
 Stato attuale: <%= @reimboursement.status_in_italian %>
