--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
             <%= link_to 'Veicoli', vehicles_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Progetti', projects_path, class: 'nav-link' %>
+            <%= link_to 'Categorie di fondi', projects_path, class: 'nav-link' %>
           </li>
           <% if current_user.admin? %>
             <li class="nav-item dropdown">
@@ -25,6 +25,8 @@
                 Amministrazione
               </a>
               <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                <li><%= link_to 'Pagamenti', admin_payments_path, class: 'dropdown-item' %></li>
+                <li><hr class="dropdown-divider"></li>
                 <li><%= link_to 'Gestione Utenti', admin_users_path, class: 'dropdown-item' %></li>
                 <li><%= link_to 'Gestione Ruoli', roles_path, class: 'dropdown-item' %></li>
               </ul>
