--- a/app/views/reimboursement_mailer/admin_note_notification.html.erb
+++ b/app/views/reimboursement_mailer/admin_note_notification.html.erb
@@ -79,7 +79,7 @@
       <div class="note">
         <p><strong>Nota aggiunta il:</strong> <%= @note.created_at.strftime("%d/%m/%Y alle %H:%M") %></p>
         <p><strong>Contenuto:</strong></p>
-        <p><%= simple_format(@note.content) %></p>
+        <p><%= simple_format(@note.text) %></p>
       </div>
       
       <div class="user-info">
