--- a/app/views/reimboursement_mailer/note_added.html.erb
+++ b/app/views/reimboursement_mailer/note_added.html.erb
@@ -81,7 +81,7 @@
     
     <div class="footer">
       <p><strong>Gestione Rimborsi</strong></p>
-      <% admin_email = ENV['EMAIL_AMMINISTRAZIONE'] || 'admin@rimborsi.app' %>
+      <% admin_email = ENV['EMAIL_AMMINISTRAZIONE'] || ENV["ADDRESS"] %>
       <p>
         Per chiarimenti contatta: <a href="mailto:<%= admin_email %>" style="color: white;"><%= admin_email %></a><br>
         Puoi anche rispondere con eventuali note direttamente sulla piattaforma.
