--- a/app/views/reimboursements/show.html.erb
+++ b/app/views/reimboursements/show.html.erb
@@ -404,7 +404,7 @@
                     </tbody>
                     <tfoot class="table-light">
                       <tr>
-                        <th colspan="5">Totale</th>
+                        <th colspan="5">Totale Netto</th>
                         <th class="text-end">€ <%= number_with_precision(@reimboursement.total_amount, precision: 2) %></th>
                       </tr>
                       <% if @reimboursement.denied_amount > 0 %>
@@ -501,7 +501,7 @@
                             <strong>Stato cambiato in:</strong> <%= Reimboursement.status_translations[note.status_change] %>
                           </div>
                         <% end %>
-                        <p class="mb-0"><%= simple_format(note.text) %></p>
+                        <p class="mb-0"><%= simple_format(note.content) %></p>
                       </div>
                     </div>
                   <% end %>
