--- a/app/views/reimboursements/show.html.erb
+++ b/app/views/reimboursements/show.html.erb
@@ -520,10 +520,13 @@
         </div>
         
         <div class="card-footer">
+          <%= link_to download_pdf_reimboursement_path(@reimboursement), class: "btn btn-outline-danger me-2" do %>
+            <i class="fas fa-file-pdf me-2"></i>Scarica PDF
+          <% end %>
           <% if @reimboursement.can_be_edited_by?(current_user) %>
             <%= link_to 'Modifica', edit_reimboursement_path(@reimboursement), class: "btn btn-primary" %>
           <% end %>
-          <%= link_to 'Indietro', reimboursements_path, class: "btn btn-secondary" %>
+          <%= link_to 'Indietro', rimboursements_path, class: "btn btn-secondary" %>
         </div>
       </div>
     </div>
