--- a/app/views/reimboursements/_expense_fields.html.erb
+++ b/app/views/reimboursements/_expense_fields.html.erb
@@ -1,7 +1,15 @@
 <div class="expense-row border rounded p-4 mb-4">
+  <!-- Cestino in alto a destra -->
+  <div class="d-flex justify-content-end mb-3">
+    <button type="button" class="btn btn-danger btn-sm remove-expense">
+      <i class="fas fa-trash"></i>
+    </button>
+    <%= f.hidden_field :_destroy %>
+  </div>
+
   <div class="row g-3">
     <!-- Campo importo unificato -->
-    <div class="col-md-3">
+    <div class="col-md-4">
       <%= f.label :amount, f.object.car? ? "Importo calcolato" : "Importo", class: "form-label" %>
       <div class="input-group">
         <span class="input-group-text">€</span>
@@ -15,17 +23,9 @@
       </div>
     </div>
     
-    <div class="col-md-3">
+    <div class="col-md-4">
       <%= f.label :purpose, "Descrizione", class: "form-label" %>
       <%= f.text_field :purpose, class: "form-control", placeholder: "Descrivi la spesa..." %>
-    </div>
-    
-    <div class="col-md-2">
-      <%= f.label :project_id, "Progetto", class: "form-label" %>
-      <%= f.select :project_id, 
-          options_from_collection_for_select(Project.active.order(:name), :id, :name, f.object.project_id),
-          { prompt: "Seleziona progetto" },
-          { class: "form-select", required: true } %>
     </div>
     
     <div class="col-md-2">
@@ -46,12 +46,14 @@
     </div>
   </div>
 
+  <!-- Progetto in una riga separata per più spazio -->
   <div class="row mt-3">
-    <div class="col-md-1 d-flex align-items-end">
-      <button type="button" class="btn btn-danger btn-sm remove-expense">
-        <i class="fas fa-trash"></i>
-      </button>
-      <%= f.hidden_field :_destroy %>
+    <div class="col">
+      <%= f.label :project_id, "Progetto", class: "form-label" %>
+      <%= f.select :project_id, 
+          options_from_collection_for_select(Project.active.order(:name), :id, :name, f.object.project_id),
+          { prompt: "Seleziona progetto" },
+          { class: "form-select", required: true } %>
     </div>
   </div>
 
